--- a/react-front/src/App.css
+++ b/react-front/src/App.css
@@ -4,17 +4,11 @@
 
 .App-logo {
   height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  display: flex;
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #65B3FC;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -22,10 +16,11 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  padding: 20px, 20px, 20px, 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.App-header-p {
+  padding: 20px, 20px, 20px, 20px;
 }
 
 @keyframes App-logo-spin {
