--- a/react-front/src/components/about/about.css
+++ b/react-front/src/components/about/about.css
@@ -1,6 +1,11 @@
 .about {
-    text-align: center;
+    text-align: justify;
 }
+
+.about-logo {
+    height: 40vmin;
+    display: flex;
+  }
 
 .about-header {
     background-color: #65B3FC;
@@ -12,4 +17,18 @@
     font-size: calc(10px + 2vmin);
     color: white;
     padding: 20px, 20px, 20px, 20px;
+  }
+
+  .info {
+      padding: 20px, 20px, 20px, 20px;
+  }
+
+  .mision-logo {
+    height: 30vmin;
+    display: flex;
+  }
+
+  .utp-logo {
+    height: 30vmin;
+    display: flex;
   }
