--- a/react-front/src/components/login/login.css
+++ b/react-front/src/components/login/login.css
@@ -1,5 +1,5 @@
-.login {
-    text-align: center;
+#login-container .form-label {
+    float: left;
 }
 
 .inicio-sesion {
@@ -18,3 +18,4 @@
     color: white;
     padding: 20px, 20px, 20px, 20px;
   }
+  
