--- a/react-front/src/components/navbar/navbar.css
+++ b/react-front/src/components/navbar/navbar.css
@@ -1,5 +1,17 @@
-#navbar .dropdown-header {
+#navbar #dropdown-header .row:nth-child(1) {
     font-size: 60px;
     display: flex;
-    justify-content: left;
+    justify-content: center;
+}
+
+#navbar #dropdown-header .row:nth-child(2) {
+    font-size: 18px;
+    display: flex;
+    justify-content: center;
+    margin-top: 5px;
+}
+
+.img-logo {
+    height: 60px;
+    padding-right: left;
 }
