--- a/react-front/src/views/consejos/consejos.css
+++ b/react-front/src/views/consejos/consejos.css
@@ -1,20 +1,23 @@
-#consejos-container {
-    background-color:  #65B3FC;
-    text-align: left;  
-    width: 100%;
+.consejos-header {
+    background-color: #65B3FC;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
+    padding: 20px, 20px, 20px, 20px;
 }
 
 h2 {
     padding: 20px 10px 10px 10px;
-    font-size: 25px;
+    font-size: 10px;
     font-family: monospace;
     color: white;
     text-align: left;  
 }
 
-h4 {
-    font-size: 18px;
-    font-family: monospace;
-    color: white;
-    text-align: left;  
+.title {
+    font-size: 30px;
 }
