--- a/react-front/src/views/tips/tips.css
+++ b/react-front/src/views/tips/tips.css
@@ -1,20 +1,25 @@
-#tips-container {
+.tips-container {
     background-color:  #65B3FC;
-    text-align: left;  
+    text-align: justify;  
     width: 100%;
+}
+
+h1 {
+    padding: 20px 10px 10px 10px;
+    
+    color: white;
+    text-align: center;  
 }
 
 h2 {
     padding: 20px 10px 10px 10px;
-    font-size: 25px;
-    font-family: monospace;
+
     color: white;
-    text-align: left;  
+    text-align: justify;  
 }
 
 h4 {
     font-size: 18px;
-    font-family: monospace;
     color: white;
     text-align: left;  
 }
